--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "KlerosLiquid",
+  "name": "kleros-liquid",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ shenwilly/KlerosLiquid",
-    "create-local": "graph create --node http://localhost:8020/ shenwilly/KlerosLiquid",
-    "remove-local": "graph remove --node http://localhost:8020/ shenwilly/KlerosLiquid",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 shenwilly/KlerosLiquid"
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ shenwilly/kleros-liquid",
+    "create-local": "graph create --node http://localhost:8020/ shenwilly/kleros-liquid",
+    "remove-local": "graph remove --node http://localhost:8020/ shenwilly/kleros-liquid",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 shenwilly/kleros-liquid"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.18.0",
-    "@graphprotocol/graph-ts": "0.18.0"
+    "@graphprotocol/graph-ts": "^0.20.0"
   }
 }
