--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -45,4 +45,6 @@ dataSources:
       callHandlers:
         - function: createSubcourt(uint96,bool,uint256,uint256,uint256,uint256,uint256[4],uint256)
           handler: handleCreateSubcourt
+        - function: executeRuling(uint256)
+          handler: handleExecuteRuling
       file: ./src/mapping.ts
