--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -55,4 +55,24 @@ dataSources:
           handler: handleChangeSubcourtJurorsForJump
         - function: changeSubcourtTimesPerPeriod(uint96,uint256[4])
           handler: handleChangeSubcourtTimesPerPeriod
-      file: ./src/mapping.ts
+      file: ./src/mappings/klerosLiquid.ts
+  - kind: ethereum/contract
+    name: PolicyRegistry
+    network: mainnet
+    source:
+      address: "0x03a9458d77dd705829fa758c64dbe770385295cc"
+      abi: PolicyRegistry
+      startBlock: 7305452
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - PolicyUpdate
+      abis:
+        - name: PolicyRegistry
+          file: ./abis/PolicyRegistry.json
+      eventHandlers:
+        - event: PolicyUpdate(indexed uint256,string)
+          handler: handlePolicyUpdate
+      file: ./src/mappings/policyRegistry.ts
