--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -47,6 +47,8 @@ dataSources:
           handler: handleCreateSubcourt
         - function: executeRuling(uint256)
           handler: handleExecuteRuling
+        - function: changeSubcourtMinStake(uint96,uint256)
+          handler: handleChangeSubcourtMinStake
         - function: changeSubcourtAlpha(uint96,uint256)
           handler: handleChangeSubcourtAlpha
         - function: changeSubcourtJurorFee(uint96,uint256)
